syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "taskmanager/api/proto;proto";

// The task management service definition
service TaskService {
  rpc CreateTask (TaskRequest) returns (TaskResponse);
  rpc GetTask (GetTaskRequest) returns (TaskResponse);
  rpc GetAllTasks (GetAllTasksRequest) returns (GetAllTasksResponse);
  rpc UpdateTask (TaskRequest) returns (TaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

// The request format for creating and updating a task
message TaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  string manager_name = 4;
}

// The request format for getting a task
message GetTaskRequest {
  string taskId = 1;
}

// The request format for deleting a task
message DeleteTaskRequest {
  string taskId = 1;
}

// The response format
message TaskResponse {
  string taskId = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string manager_name = 5;
}

// The response format for delete operation
message DeleteTaskResponse {
  string result = 1;
}

message GetAllTasksResponse {
  repeated TaskResponse tasks = 1;
}

message GetAllTasksRequest {
  google.protobuf.Empty request = 1;
}
